--- a/app/src/main/res/layout/fragment_add_new_feed.xml
+++ b/app/src/main/res/layout/fragment_add_new_feed.xml
@@ -7,7 +7,7 @@
     tools:context=".Packages.Newsfeed.Fragment.AddNewFeedFragment">
 
     <ProgressBar
-        android:id="@+id/progress_data"
+        android:id="@+id/progress_newfeed"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_centerInParent="true"
