--- a/app/src/main/res/layout/activity_home_main.xml
+++ b/app/src/main/res/layout/activity_home_main.xml
@@ -5,114 +5,118 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-
     android:id="@+id/drawrlayout"
     tools:context=".Packages.Home.HomeMainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:id="@+id/appbar_layout"
-            >
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/main_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/off_white"
-                app:contentInsetStart="0dp"
-                app:contentInsetEnd="0dp"
-                android:padding="8dp"
-                >
-                <LinearLayout
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    >
-                    <ImageButton
-                        android:id="@+id/menuBtn"
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:background="@android:color/transparent"
-                        android:src="@drawable/baseline_bars_24"
-                        android:padding="8dp"
-                        android:scaleType="centerInside"
-                        android:clickable="true"
-                        android:focusable="true"
-                        />
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
 
-                    <TextView
-                        android:id="@+id/toolbar_title"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_margin="8dp"
-                        android:background="@drawable/search_background"
-                        android:gravity="center"
-                        android:text="@string/search_text"
-                        android:layout_weight="1"
-                        android:textAlignment="center"
-                        />
+       >
+       <com.google.android.material.appbar.AppBarLayout
+           android:id="@+id/appbar_layout"
+           android:layout_width="match_parent"
+           android:layout_height="?attr/actionBarSize"
+           android:fitsSystemWindows="true"
+           android:background="@color/off_white"
+           android:elevation="4dp">
 
-                    <ImageButton
-                        android:layout_width="48dp"
-                        android:layout_height="48dp"
-                        android:background="@android:color/transparent"
-                        android:src="@drawable/baseline_bars_more_24"
-                        android:padding="8dp"
-                        android:scaleType="centerInside"
-                        android:clickable="true"
-                        android:focusable="true"
-                        />
-                </LinearLayout>
-            </com.google.android.material.appbar.MaterialToolbar>
-        </com.google.android.material.appbar.AppBarLayout>
+           <com.google.android.material.appbar.MaterialToolbar
+               android:id="@+id/main_toolbar"
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:paddingHorizontal="8dp"
+               app:contentInsetStartWithNavigation="0dp"
+               app:contentInsetEndWithActions="0dp"
+               android:fitsSystemWindows="true">
 
-        <ImageView
-            android:visibility="gone"
-            android:id="@+id/internet_status"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:background="#1D000000"
-            android:layout_below="@+id/appbar_layout"
-            />
-        <TextView
-            android:visibility="gone"
-            android:id="@+id/text_status_internet"
-            android:layout_width="wrap_content"
-            android:layout_height="39dp"
-            android:text="@string/disconect_text"
-            android:textColor="@color/chat_color_blue"
-            android:textSize="12sp"
-            android:drawableTint="@color/chat_color_blue"
-            android:drawablePadding="5sp"
-            android:layout_centerInParent="true"
-            android:layout_alignTop="@+id/internet_status"
-            android:paddingTop="10dp"/>
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/internet_status"
-            android:layout_above="@id/divider"
-            android:id="@+id/main_frame_layout"/>
+               <!-- Giữ nguyên layout con bên trong -->
+               <LinearLayout
+                   android:layout_height="match_parent"
+                   android:layout_width="match_parent"
+                   android:orientation="horizontal">
+                   <ImageButton
+                       android:id="@+id/menuBtn"
+                       android:layout_width="48dp"
+                       android:layout_height="48dp"
+                       android:background="@android:color/transparent"
+                       android:src="@drawable/baseline_bars_24"
+                       android:padding="8dp"
+                       android:scaleType="centerInside"
+                       android:clickable="true"
+                       android:focusable="true" />
 
-        <com.google.android.material.divider.MaterialDivider
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_above="@id/bottom_navigation"
-            android:id="@+id/divider"/>
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:background="@color/off_white"
-            android:id="@+id/bottom_navigation"
-            app:menu="@menu/bottom_navigation_menu"/>
-    </RelativeLayout>
+                   <TextView
+                       android:id="@+id/toolbar_title"
+                       android:layout_width="0dp"
+                       android:layout_height="match_parent"
+                       android:layout_margin="8dp"
+                       android:background="@drawable/search_background"
+                       android:gravity="center"
+                       android:text="@string/search_text"
+                       android:layout_weight="1"
+                       android:textAlignment="center" />
 
+                   <ImageButton
+                       android:layout_width="48dp"
+                       android:layout_height="48dp"
+                       android:background="@android:color/transparent"
+                       android:src="@drawable/baseline_bars_more_24"
+                       android:padding="8dp"
+                       android:scaleType="centerInside"
+                       android:clickable="true"
+                       android:focusable="true" />
+               </LinearLayout>
+           </com.google.android.material.appbar.MaterialToolbar>
+       </com.google.android.material.appbar.AppBarLayout>
+
+
+       <RelativeLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:layout_below="@id/appbar_layout"
+           >
+           <ImageView
+               android:visibility="gone"
+               android:id="@+id/internet_status"
+               android:layout_width="match_parent"
+               android:layout_height="30dp"
+               android:background="#1D000000"
+               />
+           <TextView
+               android:visibility="gone"
+               android:id="@+id/text_status_internet"
+               android:layout_width="wrap_content"
+               android:layout_height="39dp"
+               android:text="@string/disconect_text"
+               android:textColor="@color/chat_color_blue"
+               android:textSize="12sp"
+               android:drawableTint="@color/chat_color_blue"
+               android:drawablePadding="5sp"
+               android:layout_centerInParent="true"
+               android:layout_alignTop="@+id/internet_status"
+               android:paddingTop="10dp"/>
+           <FrameLayout
+               android:layout_width="match_parent"
+               android:layout_height="match_parent"
+               android:layout_below="@id/internet_status"
+               android:layout_above="@id/divider"
+               android:id="@+id/main_frame_layout"/>
+
+           <com.google.android.material.divider.MaterialDivider
+               android:layout_width="match_parent"
+               android:layout_height="2dp"
+               android:layout_above="@id/bottom_navigation"
+               android:id="@+id/divider"/>
+           <com.google.android.material.bottomnavigation.BottomNavigationView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:layout_alignParentBottom="true"
+               android:background="@color/off_white"
+               android:id="@+id/bottom_navigation"
+               app:menu="@menu/bottom_navigation_menu"/>
+       </RelativeLayout>
+   </RelativeLayout>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationview"
         android:layout_width="wrap_content"
