--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,138 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="13dp"
+    android:fillViewport="true"
     tools:context=".Packages.User.Profile.ProfileFragment">
 
-    <ProgressBar
-        android:layout_centerHorizontal="true"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:id="@+id/progress"
-        android:layout_centerInParent="true"
-        android:indeterminateTint="@color/my_primary"
-        android:visibility="gone"
-        />
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/avatar"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/baseline_user_24"
-        android:layout_marginTop="24dp" />
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="My Name"
-        android:textColor="#7B61FF"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_below="@id/avatar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"/>
-
-    <TextView
-        android:id="@+id/job_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="UI/UX Designer"
-        android:textColor="#888888"
-        android:textSize="14sp"
-        android:layout_below="@id/name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="4dp"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/email_layout"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/job_title"
-        android:layout_marginTop="24dp"
-        android:hint="Your Email">
+        android:layout_margin="13dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/email"
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_centerInParent="true"
+            android:indeterminateTint="@color/my_primary"
+            android:visibility="gone" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/avatar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/baseline_user_24"
+            android:layout_marginTop="24dp" />
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="My Name"
+            android:textColor="#7B61FF"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:layout_below="@id/avatar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:id="@+id/job_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="UI/UX Designer"
+            android:textColor="#888888"
+            android:textSize="14sp"
+            android:layout_below="@id/name"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="4dp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            android:enabled="false"
-            android:drawableEnd="@drawable/baseline_message_24"
-            android:padding="12dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_below="@id/job_title"
+            android:layout_marginTop="24dp"
+            android:hint="Your Email">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/phone_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/email_layout"
-        android:layout_marginTop="16dp"
-        android:hint="Phone Number">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress"
+                android:enabled="false"
+                android:drawableEnd="@drawable/baseline_message_24"
+                android:padding="12dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/phone"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/phone_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="phone"
-            android:enabled="false"
-            android:drawableEnd="@drawable/baseline_phone_24"
-            android:padding="12dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_below="@id/email_layout"
+            android:layout_marginTop="16dp"
+            android:hint="Phone Number">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/website_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/phone_layout"
-        android:layout_marginTop="16dp"
-        android:hint="Website">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:enabled="false"
+                android:drawableEnd="@drawable/baseline_phone_24"
+                android:padding="12dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/website"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/website_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textUri"
-            android:enabled="false"
-            android:drawableEnd="@drawable/baseline_website_24"
-            android:padding="12dp"/>
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_below="@id/phone_layout"
+            android:layout_marginTop="16dp"
+            android:hint="Website">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/genderTextInputLayout"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/website_layout"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:hint="giới tính"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/website"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textUri"
+                android:enabled="false"
+                android:drawableEnd="@drawable/baseline_website_24"
+                android:padding="12dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        >
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/gender"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/genderTextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:enabled="false"
-            android:drawableEnd="@drawable/baseline_user_24"
-            android:padding="12dp"/>
+            android:layout_below="@+id/website_layout"
+            android:layout_marginTop="16dp"
+            android:hint="Giới tính">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:drawableEnd="@drawable/baseline_user_24"
+                android:padding="12dp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/AddProfileBtn"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginBottom="20dp"
-        android:padding="6dp"
-        android:layout_marginEnd="16dp"
-        android:background="@drawable/togle_button"
-        android:src="@drawable/baseline_pen_24"
-        android:tint="@color/chat_color_blue"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        />
+        <TextView
+            android:id="@+id/logout_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Đăng xuất"
+            android:textSize="20sp"
+            android:layout_below="@+id/genderTextInputLayout"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="18dp"
+            android:textColor="@color/my_primary"
+            android:textStyle="bold"
+            android:drawableLeft="@drawable/baseline_out_24"
+            android:drawableTint="@color/my_primary"
+            android:drawablePadding="5dp"
+            android:padding="10dp" />
 
-</RelativeLayout>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/AddProfileBtn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginBottom="20dp"
+            android:padding="6dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/togle_button"
+            android:src="@drawable/baseline_pen_24"
+            android:tint="@color/chat_color_blue"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
+
+    </RelativeLayout>
+</androidx.core.widget.NestedScrollView>
